--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,5 +1,6 @@
-$mn-color:red;
-$second-color:green;
-$flex:flex;
-$main-border-radius:15px;
-
+$header-background: #7a7a7a26;
+$black: black;
+$white:white;
+$border-input-color: #7a7a7a;
+$contrast-color:#0c70f2;
+$border-background-card:#b7b7b7;
