--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,12 @@
+@use "./sass/variables";
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800&display=swap');
+a{
+  text-decoration: none;
+  color: inherit
+}
 *{
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: 'Raleway', sans-serif;
 }
-@use "./sass/variables"
