--- a/src/components/Search/index.scss
+++ b/src/components/Search/index.scss
@@ -4,6 +4,7 @@
     justify-content: center;
     margin-top: 40px;
     column-gap: 10px;
+    margin-bottom: 60px;
 }
 .search__logo{
     width: 80%;
