--- a/src/components/HeaderMenu/index.scss
+++ b/src/components/HeaderMenu/index.scss
@@ -2,7 +2,7 @@
 .HeaderMenu{
     display: flex;
     justify-content: space-between;
-    width: 100%;
+    width: 100vw;
     padding: 30px 50px;
     align-items: center; 
     background-color: $header-background; 
