--- a/src/components/ProductsCard/index.scss
+++ b/src/components/ProductsCard/index.scss
@@ -19,6 +19,7 @@
             border: none;
             border-radius: 20px;
             font-size: 1.1rem;
+            cursor: pointer;
         }
     }
 }
