--- a/src/components/ProductDetail/index.scss
+++ b/src/components/ProductDetail/index.scss
@@ -48,8 +48,12 @@
       height: 47px;
       border-radius: 10px;
       margin-top: 50px;
+      cursor: pointer;
+      color: white;
+      font-size: 1.2rem;
+      font-weight: bold;
     }
-
+    
     a {
       text-decoration: none;
       color: $white;
